<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Pett Plant</string>
    <string name="entrainment_mode">Entrainment Mode</string>
    <string name="select_entrainment_mode">Select an entrainment mode</string>
    <string name="run">Run</string>
    <string name="pause">Pause</string>
    <string name="loop">Loop</string>
    <string-array name="entrainment_array">
        <item>Meditate</item>
        <item>Meditate (Long)</item>
        <item>Alertness</item>
    </string-array>
    <string name="color_mode">Color Mode</string>
    <string name="speed">Speed</string>
    <string name="on">On</string>
    <string-array name="color_mode_array">
        <item>Rainbow Loop All</item>
        <item>Rainbow Loop Whole</item>
        <item>Rainbow Loop Spectrum</item>
        <item>I\'m All Ears (Sound Responsive)</item>
        <item>Around The World</item>
        <item>Random Pop</item>
        <item>Fck Yeah Colors</item>
        <item>Up and Down and Round and Round</item>
        <item>50/50</item>
    </string-array>
    <string name="title_connecting">connecting…</string>
    <string name="title_connected_to">Connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">Not connected to a Plant</string>
    <string name="title_comm_failed">Failed to connect to a Plant</string>
    <string name="no_plant_connected_title">Alert - No Plant Connected</string>
    <string name="no_plant_connected_message">The app is not connected to a plant. Connect to a
        plant to continue.</string>
    <string name="pett_plant">PETT Plant</string>
    <string name="pett_plant_connection">PETT Plant Connection</string>
    <string name="scan_new_plant">Scan For PETT Plants</string>
    <string name="bluetooth_scan">Bluetooth</string>
    <string name="usb_scan">USB</string>
    <string name="connection_type">Connection Type</string>
    <string name="pett_plant_name">PETT Plant Name</string>
    <string name="connection_status">Connection Status</string>
    <string name="connection_address">Connection Address</string>
    <string name="none">None</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="version_number">Version Number</string>
    <string name="copyright">Copyright &#169; 2015 john van strien</string>
    <string name="pett_led_sculpture_controller">PETT LED Sculpture Controller</string>
    <string name="contact_info">Contact Info</string>
    <string name="web">Web: <a href="http://www.biotronesis.com/">http://www.biotronesis.com/</a></string>
    <string name="email">Email: <a href="mailto:support@biotronesis.com?subject=PETT%20Controller" target="_top">support@biotronesis.com</a></string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_body">People who have had or are prone to seizures, are photosensitive, epileptic, whether knowingly or not, should not use the entrainment mode of the application.
USE AT YOUR OWN RISK! </string>
    <string name="run_entrainment_success">Run Entrainment</string>
    <string name="run_entrainment_failed_title">Run Entrainment Failed</string>
    <string name="run_entrainment_failed_message">An error was encountered while trying to run the
        entrainment sequence.</string>
    <string name="stop_entrainment_success">Stop Entrainment</string>
    <string name="stop_entrainment_failed_title">Stop Entrainment Failed</string>
    <string name="stop_entrainment_failed_message">An error was encountered while trying to stop the
        entrainment sequence.</string>
    <string name="loop_off_entrainment_success">Loop Entrainment Off</string>
    <string name="loop_off_entrainment_failed_title">Loop Off Entrainment Failed</string>
    <string name="loop_off_entrainment_failed_message">An error was encountered while trying to turn
        off looping of the entrainment sequence.</string>
    <string name="loop_on_entrainment_success">Loop Entrainment On</string>
    <string name="loop_on_entrainment_failed_title">Loop On Entrainment Failed</string>
    <string name="loop_on_entrainment_failed_message">An error was encountered while trying to turn
        on looping of the entrainment sequence.</string>
    <string name="set_color_mode_failed_title">Set Color Mode Failed</string>
    <string name="set_color_mode_failed_message">An error was encountered while trying to set
        the color mode.</string>
    <string name="run_color_mode_failed_title">Run Color Mode Failed</string>
    <string name="run_color_mode_failed_message">An error was encountered while trying to run
        the color mode.</string>
    <string name="off_color_mode_failed_title">Turn Off Color Mode Failed</string>
    <string name="off_color_mode_failed_message">An error was encountered while trying to turn off
        the color mode.</string>
    <string name="pause_color_mode_failed_title">Pause Color Mode Failed</string>
    <string name="pause_color_mode_failed_message">An error was encountered while trying to pause
        the color mode.</string>
    <string name="resume_color_mode_failed_title">Resume Color Mode Failed</string>
    <string name="resume_color_mode_failed_message">An error was encountered while trying to resume
        the color mode.</string>
    <string name="set_speed_color_mode_failed_title">Set Speed Color Mode Failed</string>
    <string name="set_speed_color_mode_failed_message">An error was encountered while trying to set
        the color mode speed.</string>
    <string name="PettPlantFragment"><![CDATA[<p><u>Entrainment Mode</u>: To start a brain wave
        entrainment cycle, select the desired sequence from the Entrainment Mode drop down list and
        tap the Run button to begin. Tap the Stop button to stop the current entrainment cycle and
        return the cycle to the beginning.</p>
        <p><u>Color Mode</u>: To select the color pattern that your PETT will display, select one
        from the Color Mode drop down list. Use the Speed slider to adjust the rate at which the
        colors change. The Pause button will freeze the colors at any given point. Tap the Resume
        button again to resume the animation.</p>
        <p><u>Hint</u>: The brain wave entrainment mode will run with several of the available color
        patterns. For the best results in maximizing the stroboscopic effect, we recommend choosing
        one of the first 3 Rainbow cycle patterns that turn all of the LEDs on full bright, and
        placing your PETT in a fully darkened room.</p>
        <p>Enjoy!</p>]]></string>
    <string name="ok">OK</string>
    <string name="sd_card_error_title">SD Card Error</string>
    <string name="sd_card_error_message">There was an error with the SD card while trying to open
        the error log file.</string>
    <string name="error_log_file_error_title">Alert - Error Log File Error</string>
    <string name="error_log_file_error_message">There was an error while trying to create or open
        the error log file.</string>
    <string name="generic_error_title">Unexpected Error</string>
    <string name="generic_error_message">An unexpected error has occurred. Please call Biotronisis
        Tech Support and send them the Errors.log file.</string>
    <string name="bluetooth_adapter_error_title">Bluetooth Adapter Error</string>
    <string name="bluetooth_adapter_error_message">There is an error with this device\'s bluetooth
        adapter.</string>
    <string name="communication_type_error_title">Communication Type Error</string>
    <string name="communication_type_error_message">An unknown Communication Type was selected.
        Select either Bluetooth or USB.</string>
    <string name="activity_fatal_setup_title">Alert - Unable To Load</string>
    <string name="activity_fatal_setup_message">An unknown error has prevented this screen from
        loading.</string>
    <string name="activity_fatal_persist_title">Alert - Unable To Save</string>
    <string name="activity_fatal_persist_message">An unknown error has prevented this screen from
        saving.</string>
    <string name="comm_params_persist_error_title">Unable To Save</string>
    <string name="comm_params_persist_error_message">Unable to save communication parameters to
        Shared Preferences.</string>
    <string name="pett_plant_params_persist_error_title">Unable To Save</string>
    <string name="pett_plant_params_persist_error_message">Unable to save Pett Plant parameters to
        Shared Preferences.</string>
    <string name="paired">Paired</string>
    <string name="not_paired">Not Paired</string>
    <string name="no_bluetooth_support_title">Alert - No Bluetooth Support</string>
    <string name="no_bluetooth_support_message">This device does not support Bluetooth</string>
    <string name="enable_bluetooth_title">Bluetooth is not Enabled</string>
    <string name="enable_bluetooth_message">Bluetooth is not currently enabled. Enable Bluetooth from
        Settings.</string>
    <string name="reconnecting_to_device">Reconnecting to your Pett Plant.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="not_connected">Not Connected</string>
    <string name="attempting_to_reconnect">Attempting to reconnect</string>
    <string name="plantCommandTimeout">The plant has not responded within the timeout.</string>
    <string name="plantCommandUnknownError">An unknown communication error has occurred.</string>
    <string name="malformed_response">Malformed Response</string>
    <string name="transmit_failed">Transmit Failed</string>
    <string name="unexpected_response">Unexpected Response</string>
    <string name="unknown_response">Unknown Response</string>
    <string name="plant_not_responding_title">Alert - The Plant is Not Responding</string>
    <string name="plant_not_responding_message">The plant is not responding. Verify that the
        Bluetooth connection is active.</string>
    <string name="got_me_some_state_yo">Got Me Some State, Yo</string>
</resources>