<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2014 john van strien

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<!-- From RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <TextView
        android:id="@+id/title_entrainment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/entrainment_mode"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner_entrainment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:prompt="@string/select_entrainment_mode"
        android:layout_below="@+id/title_entrainment" />

    <Button
        android:id="@+id/button_run_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/spinner_entrainment"
        android:text="@string/run" />

    <Button
        android:id="@+id/button_pause_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toRightOf="@+id/button_run_stop"
        android:layout_toEndOf="@+id/button_run_stop"
        android:layout_alignBaseline="@+id/button_run_stop"
        android:text="@string/pause" />

    <TextView
        android:id="@+id/title_loop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/button_run_stop"
        android:textSize="18sp"
        android:text="@string/loop" />

    <CheckBox
        android:id="@+id/checkbox_loop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/title_loop"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toRightOf="@+id/title_loop"
        android:layout_toEndOf="@+id/title_loop"
        android:layout_below="@+id/button_run_stop" />

    <View
        android:id="@+id/seperator"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/title_loop"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/title_color_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/seperator"
        android:text="@string/color_mode"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner_color_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/title_color_mode" />

    <TextView
        android:id="@+id/title_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/spinner_color_mode"
        android:textSize="18sp"
        android:text="@string/speed_leds" />

    <SeekBar
        android:id="@+id/seekbar_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:layout_below="@+id/title_speed" />

    <Button
        android:id="@+id/button_color_on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/seekbar_speed"
        android:text="@string/on" />

    <Button
        android:id="@+id/button_color_pause_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toRightOf="@+id/button_color_on_off"
        android:layout_toEndOf="@+id/button_color_on_off"
        android:layout_alignBaseline="@+id/button_color_on_off"
        android:text="@string/pause" />

</RelativeLayout>