<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2014 john van strien
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <TextView
        android:id="@+id/title_color_mode"
        style="@style/TitleTextView"
        android:layout_alignParentTop="true"
        android:text="@string/color_mode" />

    <Spinner
        android:id="@+id/spinner_color_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/title_color_mode" />

    <TextView
        android:id="@+id/title_seekbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/spinner_color_mode"
        android:textSize="18sp"
        android:text="@string/speed" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/color_seekbar"
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:layout_marginTop="5dp"
                  android:orientation="horizontal"
                  android:layout_below="@+id/title_seekbar" >

        <SeekBar
            android:id="@+id/seekbar_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="8" />

        <TextView
            android:id="@+id/value_seekbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:layout_weight="1"
            android:text="100"
            android:gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/color_buttons"
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:layout_marginTop="10dp"
                  android:orientation="horizontal"
                  android:layout_below="@+id/color_seekbar" >

        <Button
            android:id="@+id/button_color_on_off"
            style="@style/AppButton"
            android:text="@string/on"/>

        <Button
            android:id="@+id/button_color_pause_resume"
            style="@style/AppButton"
            android:text="@string/pause"/>

    </LinearLayout>

</RelativeLayout>